make it better1

--- a/customer/templates/customer/home.html
+++ b/customer/templates/customer/home.html
@@ -46,21 +46,21 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://i.ytimg.com/vi/EiAD7CNp4Vo/maxresdefault.jpg" alt="Los Angeles" class="d-block" style="width:100%; height:500px;">
+        <img src="https://i.ytimg.com/vi/EiAD7CNp4Vo/maxresdefault.jpg" alt="Los Angeles" class="d-block" style="width:100%;">
         <div class="carousel-caption">
           <h3>Shop Smart</h3>
           <p>Get Great Dicounts and best offers!!!</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://i.pinimg.com/originals/9a/71/6f/9a716f90fc2e24079b8960168d5ea089.jpg" alt="Chicago" class="d-block" style="width:100%; height:500px;">
+        <img src="https://i.pinimg.com/originals/9a/71/6f/9a716f90fc2e24079b8960168d5ea089.jpg" alt="Chicago" class="d-block" style="width:100%; ">
         <div class="carousel-caption">
           <h3>Men</h3>
           <p>Formals ||Casulas</p>
         </div> 
       </div>
       <div class="carousel-item">
-        <img src="https://finndit.com/assets/upload_file/company/V_D_Retails.jpg" alt="New York" class="d-block" style="width:100%; height:500px;">
+        <img src="https://finndit.com/assets/upload_file/company/V_D_Retails.jpg" alt="New York" class="d-block" style="width:100%; ">
         <div class="carousel-caption">
           <h3>Women</h3>
           <p>Formals || Casulas</p>
