--- a/customer/templates/customer/master.html
+++ b/customer/templates/customer/master.html
@@ -242,6 +242,9 @@
     margin-top: -1px;
   }
 
+  .d-block{
+    height:500px;
+  }
 
 
   @media only screen and(max-width: 480px) {
@@ -264,6 +267,9 @@
       cursor: pointer;
       text-align: center;
       box-shadow: 2px 2px 2px 2px black;
+  }
+  .d-block{
+    height:300px;
   }
   }
 
