make it better1

--- a/customer/templates/customer/master.html
+++ b/customer/templates/customer/master.html
@@ -265,9 +265,12 @@
       text-align: center;
       box-shadow: 2px 2px 2px 2px black;
   }
-  .d-block{
-      height:300px !important;
+  #carouselImg{
+      height: 300px !important;
     }
+  }
+  #carouselImg{
+    height:500px;
   }
 
 
