--- a/customer/templates/customer/home.html
+++ b/customer/templates/customer/home.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div >
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         {% for i in cat%}
         <li class="nav-item dropdown">
@@ -46,21 +46,21 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://i.ytimg.com/vi/EiAD7CNp4Vo/maxresdefault.jpg" alt="Los Angeles" class="d-block" style="width:100%;">
+        <img src="https://i.ytimg.com/vi/EiAD7CNp4Vo/maxresdefault.jpg" alt="Los Angeles" class="d-block" ID="carouselImg" >
         <div class="carousel-caption">
           <h3>Shop Smart</h3>
           <p>Get Great Dicounts and best offers!!!</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://i.pinimg.com/originals/9a/71/6f/9a716f90fc2e24079b8960168d5ea089.jpg" alt="Chicago" class="d-block" style="width:100%; ">
+        <img src="https://i.pinimg.com/originals/9a/71/6f/9a716f90fc2e24079b8960168d5ea089.jpg" alt="Chicago" class="d-block" ID="carouselImg">
         <div class="carousel-caption">
           <h3>Men</h3>
           <p>Formals ||Casulas</p>
         </div> 
       </div>
       <div class="carousel-item">
-        <img src="https://finndit.com/assets/upload_file/company/V_D_Retails.jpg" alt="New York" class="d-block" style="width:100%; ">
+        <img src="https://finndit.com/assets/upload_file/company/V_D_Retails.jpg" alt="New York" class="d-block" ID="carouselImg">
         <div class="carousel-caption">
           <h3>Women</h3>
           <p>Formals || Casulas</p>
