make it better1

--- a/customer/templates/customer/master.html
+++ b/customer/templates/customer/master.html
@@ -242,7 +242,10 @@
     margin-top: -1px;
   }
 
-
+  #carouselImg{
+    height:500px;
+    width:100%;
+  }
 
   @media only screen and(max-width: 480px) {
     input {
@@ -268,10 +271,20 @@
   #carouselImg{
       height: 300px !important;
     }
+    .navbar-nav {
+      display: flex;
+      flex-direction: row;
+      padding-left: 0;
+      margin-bottom: 0;
+    }
+    .navbar-nav li{
+      display: flex;
+      flex-direction: row;
+      padding-left: 0;
+      margin-bottom: 0;
+    }
   }
-  #carouselImg{
-    height:500px;
-  }
+
 
 
     </style>
