make it better1

--- a/customer/templates/customer/master.html
+++ b/customer/templates/customer/master.html
@@ -273,16 +273,11 @@
     }
     .navbar-nav {
       display: flex;
-      flex-direction: row;
+      flex-direction: row !important;
       padding-left: 0;
       margin-bottom: 0;
     }
-    .navbar-nav li{
-      display: flex;
-      flex-direction: row;
-      padding-left: 0;
-      margin-bottom: 0;
-    }
+    
   }
 
 
