make it better1

--- a/customer/templates/customer/master.html
+++ b/customer/templates/customer/master.html
@@ -271,7 +271,7 @@
   #carouselImg{
       height: 300px !important;
     }
-    .navbar-nav {
+    #subnavbar {
       display: flex;
       flex-direction: row !important;
       padding-left: 0;
