--- a/customer/templates/customer/home.html
+++ b/customer/templates/customer/home.html
@@ -14,7 +14,7 @@
   <div class="container-fluid">
 
     <div >
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="subnavbar">
+      <ul class="" id="subnavbar">
         {% for i in cat%}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
