--- a/customer/templates/customer/home.html
+++ b/customer/templates/customer/home.html
@@ -9,12 +9,24 @@
 {%block body%}
 
 <!-- NAVBAR -->
+<style>
 
+  @media only screen and(max-width: 480px) {
+    #subnavbar {
+      display: flex;
+      flex-direction: row !important; 
+      padding-left: 0;
+      margin-bottom: 0;
+      list-style: none;
+  }
+    
+  }
+</style>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
 
     <div >
-      <ul class="" id="subnavbar">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="subnavbar">
         {% for i in cat%}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
