--- a/customer/templates/customer/home.html
+++ b/customer/templates/customer/home.html
@@ -11,23 +11,15 @@
 <!-- NAVBAR -->
 <style>
 
-  @media only screen and(max-width: 480px) {
-    #subnavbar {
-      display: flex;
-  }
-  #subnavbarlist {
-    text-decoration:none;
-}
-    
-  }
+
 </style>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
 
     <div >
-      <ul id="subnavbar">
+      <ul class="subnavbar">
         {% for i in cat%}
-        <li class="nav-item dropdown" id="subnavbarlist">
+        <li class="nav-item dropdown subnavbarlist">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
             {{i.name}}
