--- a/customer/templates/customer/master.html
+++ b/customer/templates/customer/master.html
@@ -275,6 +275,16 @@
     
   }
 
+  @media only screen and(max-width: 480px) {
+    .subnavbar {
+      display: flex;
+  }
+  .subnavbarlist {
+    text-decoration:none;
+}
+    
+  }
+
 
 
     </style>
