--- a/customer/templates/customer/home.html
+++ b/customer/templates/customer/home.html
@@ -16,12 +16,12 @@
     <div >
       <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="subnavbar" style="display:flex; flex-direction:row;">
         {% for i in cat%}
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" style="margin-left: 15px;">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
             {{i.name}}
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="position: absolute;">
             {%for j in i.subcategory_set.all%}
             <li><a class="dropdown-item" href="{% url 'customer:detail' j.id%}">{{j.name}}</a></li>
             {%endfor%}
