make it better1

--- a/customer/templates/customer/detail.html
+++ b/customer/templates/customer/detail.html
@@ -7,7 +7,7 @@
 <div class='row'>
     
 	<div class='col-sm-6 col-md-4 my-5'>
-  <div class="card" style="width: 18rem;">
+  <div class="card">
 	<img src="{{prod.image.url}}" class="card-img-top" alt="...">
 	<div class="card-body">
 	  <h5 class="card-title">{{prod.name}},{{prod.brand}}</h5>
