--- a/customer/templates/customer/buy.html
+++ b/customer/templates/customer/buy.html
@@ -19,7 +19,7 @@
 </style>
 <h3 class="mx-5 my-5"><b><u>Buy Now</u></b></h3>
 <div class="container">
-	<div class='row my-5'>
+	<div class='row my-5' style="flex-wrap: wrap;">
 
 		<div class='col-sm-12 col-md-4'>
 			<div class="card ">
