--- a/customer/templates/customer/buy.html
+++ b/customer/templates/customer/buy.html
@@ -39,16 +39,16 @@
 						 <label for="inputName">Product Name</label>
 						 <input type="text" class="form-control" id="pname" name="pname" value="{{prod.name}}" readonly/>
 					 </div>
-					 <div class="row">
-					 <div class="form-group col-md-6 mb-3">
+					 
+					 <div class="form-group mb-3">
 						 <label for="inputName">Brand Name</label>
 						 <input type="text" class="form-control" id="bname" name="bname" value="{{prod.brand}}" readonly/>
 					 </div>
-					 <div class="form-group  col-md-6 mb-3">
+					 <div class="form-group   mb-3">
 						 <label for="inputName">Price</label>
 						 <input type="text" class="form-control" id="amount" name="amount"  value="{{prod.price}}" readonly/>
 					 </div>
-				 </div>
+				 
 					 <div class="form-group mb-3">
 						 <label for="inputName">Discount</label>
 						 <input type="text" class="form-control" id="discount" name="discount" value="{{prod.discount}}" readonly/>
